--- a/package.json
+++ b/package.json
@@ -1,39 +1,151 @@
 {
-  "name": "experiment-tracking",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.2.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
+    "name": "experiment-tracking",
+    "version": "1.0.0",
+    "description": "Responsive Aurum",
+    "main": "index.js",
+    "repository": "",
+    "scripts": {
+        "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
+        "test:watch": "npm run test -- --watch",
+        "start": "webpack-dev-server --env.production=false --config config/webpack.config.dev.js"
+    },
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@babel/core": "7.1.0",
+        "@fullhuman/postcss-purgecss": "^2.3.0",
+        "@svgr/webpack": "2.4.1",
+        "axios": "^0.18.0",
+        "babel-cli": "^6.26.0",
+        "babel-core": "7.0.0-bridge.0",
+        "babel-eslint": "9.0.0",
+        "babel-jest": "23.6.0",
+        "babel-loader": "8.0.4",
+        "babel-plugin-jsx-control-statements": "^4.0.0",
+        "babel-plugin-named-asset-import": "^0.2.2",
+        "babel-preset-env": "^1.7.0",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-preset-react": "^6.24.1",
+        "babel-preset-react-app": "^5.0.4",
+        "babel-preset-stage-1": "^6.24.1",
+        "babel-register": "^6.26.0",
+        "bfj": "6.1.1",
+        "case-sensitive-paths-webpack-plugin": "2.1.2",
+        "chalk": "2.4.1",
+        "clean-webpack-plugin": "^1.0.0",
+        "compression": "^1.7.3",
+        "copy-webpack-plugin": "^4.6.0",
+        "css-loader": "^1.0.1",
+        "dotenv": "6.0.0",
+        "dotenv-expand": "4.2.0",
+        "eslint": "5.6.0",
+        "eslint-config-react-app": "^3.0.4",
+        "eslint-loader": "2.1.1",
+        "eslint-plugin-flowtype": "2.50.1",
+        "eslint-plugin-import": "2.14.0",
+        "eslint-plugin-jsx-a11y": "6.1.2",
+        "eslint-plugin-jsx-control-statements": "^2.2.1",
+        "eslint-plugin-react": "7.11.1",
+        "file-loader": "2.0.0",
+        "fs-extra": "7.0.0",
+        "glob-all": "^3.2.1",
+        "html-webpack-plugin": "4.0.0-alpha.2",
+        "mini-css-extract-plugin": "0.4.3",
+        "optimize-css-assets-webpack-plugin": "5.0.1",
+        "pnp-webpack-plugin": "1.1.0",
+        "postcss-flexbugs-fixes": "4.1.0",
+        "postcss-loader": "3.0.0",
+        "postcss-normalize": "^9.0.0",
+        "postcss-preset-env": "6.0.6",
+        "postcss-safe-parser": "4.0.1",
+        "purgecss-webpack-plugin": "^2.3.0",
+        "react-dev-utils": "^6.0.5",
+        "react-syntax-highlighter": "^13.5.1",
+        "sass-loader": "^7.1.0",
+        "style-loader": "^0.23.1",
+        "sw-precache-webpack-plugin": "^0.11.5",
+        "terser-webpack-plugin": "1.1.0",
+        "url-loader": "1.1.1",
+        "webpack": "^4.22.0",
+        "webpack-cli": "^3.1.2",
+        "webpack-dev-server": "^3.1.9",
+        "webpack-manifest-plugin": "2.0.4",
+        "workbox-webpack-plugin": "^4.3.1"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^1.2.7",
+        "@fortawesome/free-solid-svg-icons": "^5.4.2",
+        "@fortawesome/react-fontawesome": "^0.1.3",
+        "@fullcalendar/bootstrap": "^4.4.0",
+        "@fullcalendar/core": "^4.4.0",
+        "@fullcalendar/daygrid": "^4.4.0",
+        "@fullcalendar/interaction": "^4.4.0",
+        "@fullcalendar/react": "^4.4.0",
+        "@sandstreamdev/react-swipeable-list": "^0.4.1",
+        "axios": "^0.18.0",
+        "bootstrap": "4.3.1",
+        "classnames": "^2.2.6",
+        "detect-browser": "^4.8.0",
+        "final-form": "^4.19.1",
+        "jsbn": "^1.1.0",
+        "lodash": "^4.17.11",
+        "moment": "^2.22.2",
+        "prop-types": "15.7.2",
+        "react": "16.12.0",
+        "react-bootstrap-range-slider": "^0.3.8",
+        "react-dates": "^18.3.0",
+        "react-dom": "16.12.0",
+        "react-final-form": "^6.4.0",
+        "react-final-form-hooks": "^2.0.2",
+        "react-final-form-listeners": "^1.0.2",
+        "react-ga": "^2.5.7",
+        "react-google-recaptcha": "^2.1.0",
+        "react-hooks-global-state": "^1.0.0",
+        "react-items-carousel": "^2.2.1",
+        "react-outside-click-handler": "^1.3.0",
+        "react-redux": "6.0.1",
+        "react-responsive": "^8.0.3",
+        "react-router-dom": "^5.2.0",
+        "react-toastify": "^4.4.0",
+        "reactstrap": "^8.9.0",
+        "redux": "4.0.0",
+        "redux-form": "^8.3.10",
+        "redux-promise": "^0.6.0",
+        "redux-thunk": "^2.3.0",
+        "sass": "^1.86.0"
+    },
+    "eslintConfig": {
+        "plugins": [
+            "jsx-control-statements"
+        ],
+        "extends": [
+            "react-app",
+            "plugin:jsx-control-statements/recommended"
+        ],
+        "ecmaFeatures": {
+            "jsx": true
+        },
+        "rules": {
+            "react/jsx-no-undef": [
+                2,
+                {
+                    "allowGlobals": true
+                }
+            ]
+        }
+    },
+    "browserslist": [
+        ">0.2%",
+        "not dead",
+        "not ie <= 11",
+        "not op_mini all"
     ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "babel": {
+        "presets": [
+            "react-app"
+        ],
+        "plugins": [
+            "jsx-control-statements"
+        ]
+    }
 }
