--- a/package.json
+++ b/package.json
@@ -81,6 +81,8 @@
         "@fullcalendar/daygrid": "^4.4.0",
         "@fullcalendar/interaction": "^4.4.0",
         "@fullcalendar/react": "^4.4.0",
+        "@material-ui/core": "^4.12.4",
+        "@material-ui/icons": "^4.11.2",
         "@sandstreamdev/react-swipeable-list": "^0.4.1",
         "axios": "^0.18.0",
         "bootstrap": "4.3.1",
