--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,50 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
+# --------------------
+# General
+# --------------------
+*.pyc
+__pycache__/
+*.log
+*.sqlite3
+.env
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+Thumbs.db
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# --------------------
+# Python / FastAPI (backend)
+# --------------------
+backend/__pycache__/
+backend/*.py[cod]
+backend/venv/
+backend/.venv/
+backend/env/
+backend/.env
+backend/.mypy_cache/
+backend/.pytest_cache/
+backend/.coverage
+backend/instance/
+backend/.vscode/
+
+# Optional: if you're using poetry
+backend/poetry.lock
+
+# --------------------
+# Node / React (frontend)
+# --------------------
+frontend/node_modules/
+frontend/.env
+frontend/.env.*.local
+frontend/.next/
+frontend/.turbo/
+frontend/dist/
+frontend/build/
+frontend/.vscode/
+frontend/npm-debug.log*
+frontend/yarn-debug.log*
+frontend/yarn-error.log*
+frontend/package-lock.json
+frontend/pnpm-lock.yaml
+frontend/.eslintcache
+frontend/.parcel-cache/
+
+# Optional: macOS and Windows
+*.swp
