--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
         "react-router-dom": "^5.2.0",
         "react-toastify": "^4.4.0",
         "reactstrap": "^8.9.0",
+        "recharts": "^2.15.3",
         "redux": "4.0.0",
         "redux-form": "^8.3.10",
         "redux-promise": "^0.6.0",
